apps/bentopdf/bentopdf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app.kubernetes.io/name: bentopdf
    app.kubernetes.io/instance: bentopdf
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: bentopdf
    app.kubernetes.io/instance: bentopdf
